# stata

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  misc.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
examples/: eda.ipynb
scripts/: startup.sh
src/halsey/: __init__.py
src/halsey/config/: __init__.py  data_config.py
src/halsey/evaluation/: cross_validation.py  metrics.py
src/halsey/models/: base.py  linear_models.py  neural_nets.py
src/halsey/optimization/: __init__.py  hyperopt.py  model_selection.py  search_spaces.py
src/halsey/pipeline/: auto_ml.py
src/halsey/preprocessing/: base.py  categorical.py  feature_selection.py
src/halsey/utils/: __init__.py  logging.py
src/stata/: untitled.txt
src/stata/config/: model_config.py
src/stata/evaluation/: __init__.py  model_analysis.py
src/stata/models/: __init__.py  ensembles.py  tree_models.py
src/stata/pipeline/: __init__.py  ensemble_pipeline.py
src/stata/preprocessing/: __init__.py  numerical.py  text.py
src/stata/utils/: io.py  validation.py
tests/: __init__.py  conftest.py
tests/test_models/: test_classification.py  test_regression.py
tests/test_preprocessing/: test_data_cleaning.py
