[metadata]
name = predml
description = Enterprise-grade prediction modeling package
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/predml
project_urls =
    Bug Tracker = https://github.com/yourusername/predml/issues
    Documentation = https://predml.readthedocs.io/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8,<3.11
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.0.0
    isort>=5.10.0
    mypy>=0.950
    flake8>=4.0.0
    pre-commit>=2.17.0
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.12.0
jupyter =
    jupyterlab>=3.0.0
    ipywidgets>=7.6.0
    jupyter-contrib-nbextensions>=0.5.1

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .eggs
per-file-ignores =
    __init__.py:F401,F403

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy.plugins.numpy.*]
ignore_missing_imports = True

[mypy.plugins.pandas.*]
ignore_missing_imports = True

[mypy.plugins.sklearn.*]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = 
    --verbose
    --tb=short
    --cov=predml
    --cov-report=term-missing
    --cov-report=html
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[coverage:run]
source = predml
omit =
    */tests/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html